--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 # REACT_APP_BASE_URL = https://study-notion-backend-3zld.onrender.com/api
-REACT_APP_BASE_URL = http://localhost:4000/api
+# REACT_APP_BASE_URL = http://localhost:4000/api
+REACT_APP_BASE_URL = https://studynotion-backend-z645.onrender.com
